fix: css text align

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@
     font-size: 85px;
     color: #fff;
     animation: flipTitle 2s;
+    text-align: center;
 }
 
 @keyframes flipTitle {
@@ -119,7 +120,7 @@
     {
         min-height: 200px;
     }
-    
+
     .main h2
     {
         font-size: 18px;
